# OrthoMeshTools

./: CMakeLists.txt  vcpkg.json
GumTrimLine/: GumTrimLine.h
MeshFix/: MeshFix.h
